# oge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clean_msvc_cmake_gen.bat  test_data.yaml
docs/: .doxygen.conf  header.html
docs/html/: annotated.html  annotated_dup.js  app_8hpp_source.html  application_8hpp_source.html  application__layer_8hpp_source.html  asset__handler_8hpp_source.html  classApp-members.html  classApp.html  classAssetsEditorWorkspace-members.html  classAssetsEditorWorkspace.html  classConsoleEditorWorkspace-members.html  classConsoleEditorWorkspace.html  classDockingEditorWorkspace-members.html  classDockingEditorWorkspace.html  classEditorWorkspace-members.html  classEditorWorkspace.html  classEditorWorkspace.js  classHierarchyEditorWorkspace-members.html  classHierarchyEditorWorkspace.html  classPanelEditorWorkspaceBase-members.html  classPanelEditorWorkspaceBase.html  classPreferences-members.html  classPreferences.html  classProject-members.html  classProject.html  classPropertiesEditorWorkspace-members.html  classPropertiesEditorWorkspace.html  classReflectionRegistry.html  classViewportEditorWorkspace-members.html  classViewportEditorWorkspace.html  classes.html  classkryos_1_1Application-members.html  classkryos_1_1Application.html  classkryos_1_1ApplicationLayer-members.html  classkryos_1_1ApplicationLayer.html  classkryos_1_1ApplicationLayer.js  classkryos_1_1AssetHandler-members.html  classkryos_1_1AssetHandler.html  classkryos_1_1BasicRenderer-members.html  classkryos_1_1BasicRenderer.html  (+155 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_10.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  searchdata.js
editor/assets/default_settings/: default_layout.ini  layout2.ini  preferences.yaml
editor/assets/icons/: links.txt
editor/src/: CMakeLists.txt  main.cpp  reflection.cpp
editor/src/components/: core.hpp
editor/src/core/: CMakeLists.txt  app.cpp  app.hpp  editor.cpp  editor.hpp  project.cpp  project.hpp
editor/src/gui/: CMakeLists.txt  app.cpp  app.hpp  assets.cpp  assets.hpp  console.cpp  console.hpp  docking.cpp  docking.hpp  editor.cpp  editor.hpp  entity.cpp  hierarchy.cpp  hierarchy.hpp  preferences.cpp  preferences.hpp  properties.cpp  properties.hpp  properties_workspace.cpp  viewport.cpp  viewport.hpp
editor/src/utils/: CMakeLists.txt  utils.hpp  yaml_types.hpp
